fix z-index to prevent overlapping of hidden elements

--- a/src/scss/7-trumps/_js-utilities.scss
+++ b/src/scss/7-trumps/_js-utilities.scss
@@ -1,5 +1,8 @@
 // ---- js-hidden (Elements to be hidden via JS) ----
-.js-hidden { display: none; }
+.js-hidden {
+	display: none;
+	z-index: -1;
+}
 
 // ---- js-fixed (Element to be fixed via JS) ----
 .js-fixed { position: fixed; }
